syntax = "proto2";

message User {
  optional uint32 id = 1;
  optional string username = 2 [(proto2ffi.max_length) = 64];
  optional string email = 3 [(proto2ffi.max_length) = 128];
  optional uint64 created_at = 4;
}

message Post {
  optional uint32 id = 1;
  optional uint32 author_id = 2;
  optional string title = 3 [(proto2ffi.max_length) = 256];
  optional string content = 4 [(proto2ffi.max_length) = 4096];
  optional uint64 created_at = 5;
  optional uint32 likes = 6;
}

message Response {
  optional bool success = 1;
  optional string message = 2 [(proto2ffi.max_length) = 512];
  optional uint32 affected_id = 3;
}
